TODO
* stream rewrite
  - only have create/read/write/seek no caching
* remove clone functions ?
* rewrite
  - remove list from stream
  - add write support
  - update libfdata_tree_initialize
* add tests
* update manuals
* update msvscpp files

20130320
* worked on refactor to combine fdata and mfdata
* worked on stream
* removed stream reference

20130319
* worked on refactor to combine fdata and mfdata

20130303
* worked on refactor to combine fdata and mfdata

20130224
* 2013 update
* code clean up

20121216
* worked on refactor to combine fdata and mfdata

20121215
* worked on refactor to combine fdata and mfdata

20121212
* worked on refactor to combine fdata and mfdata

20121211
* created stand-alone version based on libfguid
