@@ -33,11 +33,11 @@
  * for local use of libfdata
  */
 #else
-#define LIBFDATA_VERSION						20130321
+#define LIBFDATA_VERSION						20130322
 
 /* The libfdata version string
  */
-#define LIBFDATA_VERSION_STRING						"20130321"
+#define LIBFDATA_VERSION_STRING						"20130322"
 
 /* The library flags definitions
  */
